<resources xmlns:tools="http://schemas.android.com/tools"  tools:ignore="MissingTranslation">
    <string name="oxford_engkor_main_dict_name">Oxford ENG-KOR</string>
    <string name="oxford_engkor_product_name">Oxford Advanced Learner’s \nEnglish-Korean Dictionary</string>
    <string name="oxford_engeng_main_dict_name">Oxford Advanced Learner’s</string>
    <string name="oxford_engeng_product_name">Oxford Advanced Learner’s Dictionary, 8th edition ⓒ Oxford University Press 2010</string>
    <string name="newace_korean_main_dict_name">New Ace KOR</string>
    <string name="newace_korean_product_name">NEW-ACE KOREAN LANGUAGE DICTIONARY \nⓒ DIOTEK Co.,Ltd</string>
    <string name="newace_jpnkor_main_dict_name">New Ace JPN-KOR</string>
    <string name="newace_jpnkor_sub_dict_name">New Ace KOR-JPN</string>
    <string name="newace_jpnkor_product_name">NEW-ACE JAPANESE-KOREAN DICTIONARY \nⓒ DIOTEK Co.,Ltd</string>
    <string name="newace_engkor_main_dict_name">New Ace ENG-KOR</string>
    <string name="newace_engkor_sub_dict_name">New Ace KOR-ENG</string>
    <string name="newace_engkor_product_name">NEW-ACE ENGLISH-KOREAN DICTIONARY \nⓒ DIOTEK Co.,Ltd</string>
    <string name="newace_koreng_product_name">NEW-ACE KOREAN-ENGLISH DICTIONARY \nⓒ DIOTEK Co.,Ltd</string>
    <string name="obunsha_engjpn_main_dict_name">Obunsha ENG-JPN</string>
    <string name="obunsha_engjpn_sub_dict_name">Obunsha JPN-ENG</string>
    <string name="obunsha_engjpn_product_name">Obunsha Pocket Comprehensive English-Japanese/Japanese-English Dictionary (C) 2010 Obunsha Co.,Ltd</string>
    <string name="national_korean_main_dict_name">표준국어대사전</string>
    <string name="national_korean_product_name">Standard Korean Language Dictionary ⓒ The National Institute of the Korean Language</string>
    <string name="mantou_chnkor_main_dict_name">MANTOU CHN-KOR</string>
    <string name="mantou_chnkor_sub_dict_name">MANTOU KOR-CHN</string>
    <string name="mantou_chnkor_product_name">Mantou Chinese-Korean Dictionary ⓒ 2011 mantou</string>
    <string name="lacviet_viekor_main_dict_name">LacViet VNM-KOR</string>
    <string name="lacviet_viekor_sub_dict_name">LacViet KOR-VNM</string>
    <string name="lacviet_viekor_product_name">Korean-Vietnamese Dictionary Database ⓒ Lac Viet Computing Corp., Vietnam</string>
    <string name="lacviet_engvie_main_dict_name">LacViet ENG-VNM</string>
    <string name="lacviet_engvie_sub_dict_name">LacViet VNM-ENG</string>
    <string name="lacviet_engvie_product_name">English-Vietnamese Dictionary Database ⓒ Lac Viet Computing Corp., Vietnam</string>
    <string name="fltrp_engchn_main_dict_name">FLTRP ENG-CHN</string>
    <string name="fltrp_engchn_sub_dict_name">FLTRP CHN-ENG</string>
    <string name="fltrp_engchn_product_name">An Advanced English-Chinese Dictionary © 外语教学与研究出版社 2002\nLittle Chinese-English Dictionary © 外语教学与研究出版社 2003</string>
    <string name="collins_engchnjpnkor_main_dict_name">Collins EECJK</string>
    <string name="collins_engchnjpnkor_product_name">Collins COBUILD English/Chinese/Japanese/Korean Advanced Dictionary of American English” © HarperCollins Publishers 2010</string>
    <string name="oxford_engjpnmini_main_dict_name">Oxford ENG-JPN Mini</string>
    <string name="oxford_engjpnmini_sub_dict_name">Oxford JPN-ENG Mini</string>
    <string name="oxford_engjpnmini_product_name">The Oxford Japanese Mini Dictionary, Second edition ⓒ Jonathan Bunt, 2009</string>
    <string name="oxford_engengnewamerican_main_dict_name">New Oxford American</string>
    <string name="oxford_engengnewamerican_product_name">The New Oxford American Dictionary ⓒ Oxford University Press, Inc. 2010</string>
    <string name="oxford_engengmini_main_dict_name">Oxford ENG Mini</string>
    <string name="oxford_engengmini_product_name">Oxford English Mini Dictionary ⓒ Oxford University Press 2007</string>
    <string name="oxford_engengconcise_main_dict_name">Oxford Concise ENG</string>
    <string name="oxford_engengconcise_product_name">Concise Oxford English Dictionary ⓒ Oxford University Press 2008</string>
    <string name="oxford_engengamericancollege_main_dict_name">Oxford American College</string>
    <string name="oxford_engengamericancollege_product_name">Oxford American College Dictionary, Second edition revised ⓒ Oxford University Press, Inc. 2010</string>
    <string name="oxford_engchnmini_main_dict_name">Oxford ENG-CHN Mini</string>
    <string name="oxford_engchnmini_sub_dict_name">Oxford CHN-ENG Mini</string>
    <string name="oxford_engchnmini_product_name">Oxford Chinese Mini Dictionary, 2nd Edition ⓒ Boping Yuan and Sally K. Church, 2008</string>
    <string name="oxford_engchn_main_dict_name">Oxford Chinese Dictionary</string>
    <string name="oxford_engchn_sub_dict_name">Oxford Chinese Dictionary</string>
    <string name="oxford_engchn_product_name">Oxford Chinese Dictionary © Oxford University Press and Foreign Language Teaching and Research Press 2010\nThe Chinese-English source text is adapted from the New Century Chinese-English Dictionary, published by Foreign Language and Research Press © Foreign Language Teaching and Research Press 2003</string>
    <string name="collins_engeng_main_dict_name">Collins Cobuild Advanced</string>
    <string name="collins_engeng_product_name">Collins Cobuild Advanced Dictionary of English ⓒ HarperCollins Publishers 2009</string>
    <string name="vox_engspn_main_dict_name">VOX ENG-ESP</string>
    <string name="vox_engspn_sub_dict_name">VOX ESP-ENG</string>
    <string name="vox_engspn_product_name">VOX Advanced English-Spanish/Spanish-English Dictionary© 2008, Larousse Editorial, S. L.</string>
    <string name="SPELLCHECK_NONE" />
    <string name="SPELLCHECK_ENGDBNAME">SpellCheck_EngDB</string>
    <string name="app_name">Dictionary</string>
    <string name="similar_list">Similar words</string>
    <string name="model_check">Device model not supported</string>
    <string name="title_search">Search</string>
    <string name="title_flashcard">Flashcard</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="word_search">Word search</string>
    <string name="phrases_search">Search phrases</string>
    <string name="hangulro_search">Hangulro™ search</string>
    <string name="example_search">Search examples</string>
    <string name="total_search">Search all dictionaries</string>
    <string name="spellcheck_search">Sounds like…</string>
    <string name="initial_search">Initial+™ Search</string>
    <string name="pinyin_search">Pinyin Search</string>
    <string name="oldkor_search">Old Korean</string>
    <string name="no_result">No matching entries found.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="origin_search_title">Lemma forms found</string>
    <string name="change_dictionarys">Select dictionary</string>
    <string name="kumsung_jpn_kor_dic">New Ace JPN-KOR</string>
    <string name="kumsung_kor_jpn_dic">New Ace KOR-JPN</string>
    <string name="kumsung_eng_kor_dic">New Ace ENG-KOR</string>
    <string name="kumsung_kor_eng_dic">New Ace KOR-ENG</string>
    <string name="kumsung_korean_dic">New Ace KOR</string>
    <string name="kumsung_oldkorean_dic">New Ace KOR - Old Korean</string>
    <string name="dd_eng_kor_dic">Prime ENG-KOR</string>
    <string name="dd_kor_eng_dic">Prime KOR-ENG</string>
    <string name="dd_chn_kor_dic">Prime CHN-KOR</string>
    <string name="dd_kor_chn_dic">The Commercial Press’s KOR-CHN</string>
    <string name="dd_jpn_kor_dic">Prime JPN-KOR</string>
    <string name="dd_kor_jpn_dic">Prime KOR-JPN</string>
    <string name="dd_toeic_dic">KONGNAMUL TOEIC</string>
    <string name="collins_eng_eng_dic">Collins Cobuild Advanced</string>
    <string name="oxford_oald_dic">Oxford Advanced Learner’s</string>
    <string name="oxford_eng_kor_dic">Oxford ENG-KOR</string>
    <string name="oxford_consise">Concise Oxford English</string>
    <string name="oxford_english_mini">Oxford ENG Mini</string>
    <string name="oxford_new_american">New Oxford American</string>
    <string name="oxford_chinese_mini">Oxford CHN Mini</string>
    <string name="oxford_japanese_mini">Oxford JPN Mini</string>
    <string name="oxford_american_college">Oxford American College</string>
    <string name="oxford_eng_chn_dic">Oxford ENG-CHN</string>
    <string name="oxford_chn_eng_dic">Oxford CHN-ENG</string>
    <string name="e4u_eng_kor_dic">e4u ENG-KOR</string>
    <string name="e4u_kor_eng_dic">e4u KOR-ENG</string>
    <string name="obunsha_jpn_jpn_dic">Obunsha JPN</string>
    <string name="obunsha_eng_jpn_dic">Obunsha ENG-JPN</string>
    <string name="obunsha_jpn_eng_dic">Obunsha JPN-ENG</string>
    <string name="wys_eng_simp_dic">FLTRP ENG-CHN</string>
    <string name="wys_simp_eng_dic">FLTRP CHN-ENG</string>
    <string name="mantou_kor_simp_dic">MANTOU KOR-CHN</string>
    <string name="mantou_simp_kor_dic">MANTOU CHN-KOR</string>
    <string name="allinall_eng_kor_dic">A[línɔːl] ENG-KOR</string>
    <string name="allinall_kor_eng_dic">A[línɔːl] KOR-ENG</string>
    <string name="allinall_chn_kor_dic">A[línɔːl] CHN-KOR</string>
    <string name="allinall_kor_chn_dic">A[línɔːl] KOR-CHN</string>
    <string name="allinall_jpn_kor_dic">A[línɔːl] JPN-KOR</string>
    <string name="allinall_kor_jpn_dic">A[línɔːl] KOR-JPN</string>
    <string name="allinall_kor_kor_dic">A[línɔːl] KOR</string>
    <string name="starpublications_eng_tagalog">StarPublications Eng/Tagalog</string>
    <string name="starpublications_tagalog_eng">StarPublications Tagalog/Eng</string>
    <string name="starpublications_eng_farsi">StarPublications Eng/Farsi</string>
    <string name="starpublications_farsi_eng">StarPublications Farsi/Eng</string>
    <string name="starpublications_eng_hind">StarPublications Eng/Hind</string>
    <string name="starpublications_hind_eng">StarPublications Hind/Eng</string>
    <string name="starpublications_eng_urdu">StarPublications Eng/Urdu</string>
    <string name="starpublications_urdu_eng">StarPublications Urdu/Eng</string>
    <string name="malayin_eng_arabic">Malayin Eng/Arabic</string>
    <string name="malayin_arabic_eng">Malayin Arabic/Eng</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="sort">Sort</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="dicname">Dictionary</string>
    <string name="sortByASC">A to Z/oldest first</string>
    <string name="sortByDSC">Z to A/recent first</string>
    <string name="cradle">Cradle</string>
    <string name="study">Study</string>
    <string name="dictation">Dictation</string>
    <string name="timeGridTextManual">Manual</string>
    <string name="timeGridText15s">15s</string>
    <string name="timeGridText30s">30s</string>
    <string name="timeGridText45s">45s</string>
    <string name="timeGridText60s">60s</string>
    <string name="hangulro_title">Hangulro™ search</string>
    <string name="hangulro_info">Speakers of Korean can search for a word in other languages by typing the pronunciation of the word in Hangeul. E.g. search term: 딕셔너리, search result: dictionary</string>
    <string name="empty_common_prev_text">Enter search query and click on</string>
    <string name="empty_common_next_text">.</string>
    <string name="alert_dialog_productnum">You can enter below your activation code.</string>
    <string name="access_internet">This application has access to the internet for register.</string>
    <string name="guide_seach_method">Change search method</string>
    <string name="guide_tab">Click on word to activate the special function toolbar.</string>
    <string name="guide_flick">Drag screen to left to \nwiden the dictionary view.</string>
</resources>