<?xml version="1.0" encoding="utf-8"?>
<com.diotek.diodict.uitool.CustomPopupLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/search_method_top_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:layout_marginRight="12dp">
        <TextView android:textSize="@dimen/searchmethod_title_font_size" android:textColor="#ff412819" android:ellipsize="marquee" android:gravity="center" android:id="@+id/SearchMethodWord" android:background="@drawable/search_method_btn" android:layout_width="match_parent" android:layout_height="@dimen/searchmethod_height" android:text="@string/word_search" android:singleLine="true"/>
        <TextView android:textSize="@dimen/searchmethod_title_font_size" android:textColor="#ff412819" android:ellipsize="marquee" android:gravity="center" android:id="@+id/SearchMethodPhrase" android:background="@drawable/search_method_btn" android:layout_width="match_parent" android:layout_height="@dimen/searchmethod_height" android:text="@string/phrases_search" android:singleLine="true"/>
        <TextView android:textSize="@dimen/searchmethod_title_font_size" android:textColor="#ff412819" android:ellipsize="marquee" android:gravity="center" android:id="@+id/SearchMethodExample" android:background="@drawable/search_method_btn" android:layout_width="match_parent" android:layout_height="@dimen/searchmethod_height" android:text="@string/example_search" android:singleLine="true"/>
        <TextView android:textSize="@dimen/searchmethod_title_font_size" android:textColor="#ff412819" android:ellipsize="marquee" android:gravity="center" android:id="@+id/SearchMethodHangulro" android:background="@drawable/search_method_btn" android:layout_width="match_parent" android:layout_height="@dimen/searchmethod_height" android:text="@string/hangulro_search" android:singleLine="true"/>
        <TextView android:textSize="@dimen/searchmethod_title_font_size" android:textColor="#ff412819" android:ellipsize="marquee" android:gravity="center" android:id="@+id/SearchMethodSpellCheck" android:background="@drawable/search_method_btn" android:layout_width="match_parent" android:layout_height="@dimen/searchmethod_height" android:text="@string/spellcheck_search" android:singleLine="true"/>
        <TextView android:textSize="@dimen/searchmethod_title_font_size" android:textColor="#ff412819" android:ellipsize="marquee" android:gravity="center" android:id="@+id/SearchMethodInitial" android:background="@drawable/search_method_btn" android:layout_width="match_parent" android:layout_height="@dimen/searchmethod_height" android:text="@string/initial_search" android:singleLine="true"/>
        <TextView android:textSize="@dimen/searchmethod_title_font_size" android:textColor="#ff412819" android:ellipsize="marquee" android:gravity="center" android:id="@+id/SearchMethodPinyin" android:background="@drawable/search_method_btn" android:layout_width="match_parent" android:layout_height="@dimen/searchmethod_height" android:text="@string/pinyin_search" android:singleLine="true"/>
        <TextView android:textSize="@dimen/searchmethod_title_font_size" android:textStyle="bold" android:textColor="#ff412819" android:ellipsize="marquee" android:gravity="center" android:id="@+id/SearchMethodOldKor" android:background="@drawable/search_method_btn" android:layout_width="match_parent" android:layout_height="@dimen/searchmethod_height" android:text="@string/oldkor_search" android:singleLine="true"/>
        <TextView android:textSize="@dimen/searchmethod_title_font_size" android:textColor="#ff412819" android:ellipsize="marquee" android:gravity="center" android:id="@+id/SearchMethodTotal" android:background="@drawable/search_method_btn" android:layout_width="match_parent" android:layout_height="@dimen/searchmethod_height" android:text="@string/total_search" android:singleLine="true"/>
    </LinearLayout>
    <ImageView android:background="@drawable/search_method_btn_bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:layout_marginRight="12dp"/>
</com.diotek.diodict.uitool.CustomPopupLinearLayout>
