<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/setDurationLayout" android:background="@drawable/cradle_pop1_bg" android:layout_width="320dp" android:layout_height="160dp" android:layout_marginTop="36dp">
    <SeekBar android:id="@+id/recogTimeSeekBar" android:layout_width="289.2969dp" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:max="60" android:progress="3" android:progressDrawable="@drawable/progress_horizontal" android:thumb="@drawable/seekbar_handle" android:thumbOffset="0dp" android:layout_centerHorizontal="true"/>
    <ImageView android:id="@+id/timeGrid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/timegrid" android:layout_below="@+id/recogTimeSeekBar" android:layout_centerHorizontal="true"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="300dp" android:layout_height="wrap_content" android:layout_below="@+id/timeGrid">
        <TextView android:textSize="10.6sp" android:gravity="left" android:id="@+id/timeManual" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timeGridTextManual" android:layout_weight="0.3"/>
        <TextView android:textSize="10.6sp" android:gravity="center" android:id="@+id/time15s" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timeGridText15s" android:layout_weight="3"/>
        <TextView android:textSize="10.6sp" android:gravity="center" android:id="@+id/time30s" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timeGridText30s" android:layout_weight="1"/>
        <TextView android:textSize="10.6sp" android:gravity="center" android:id="@+id/time45s" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timeGridText45s" android:layout_weight="3"/>
        <TextView android:textSize="10.6sp" android:gravity="right" android:id="@+id/time60s" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timeGridText60s" android:layout_weight="0.5"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/setDurationBtnLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <Button android:textSize="13.3sp" android:textColor="@drawable/cradle_duration_pop_btn_text" android:gravity="center" android:id="@+id/setDurationOkBtn" android:background="@drawable/popbtn" android:layout_width="78.6dp" android:layout_height="29.3dp" android:layout_marginRight="5dp" android:text="@string/ok"/>
        <Button android:textSize="13.3sp" android:textColor="@drawable/cradle_duration_pop_btn_text" android:gravity="center" android:id="@+id/setDurationCancelBtn" android:background="@drawable/popbtn" android:layout_width="78.6dp" android:layout_height="29.3dp" android:text="@string/cancel"/>
    </LinearLayout>
</RelativeLayout>
