<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/HistoryContentLayout" android:background="#ffffffff" android:layout_width="match_parent" android:layout_height="wrap_content">
    <RelativeLayout android:id="@+id/HistoryToolbarLayout" android:background="@drawable/topbar_bg" android:paddingLeft="10.6dp" android:layout_width="match_parent" android:layout_height="52dp" android:layout_below="@+id/InputLayout" android:layout_alignParentTop="true">
        <Button android:textSize="12sp" android:textColor="@color/textColor_Black" android:id="@+id/HistoryEditBtn" android:background="@drawable/btn" android:layout_width="60dp" android:layout_height="35dp" android:layout_marginTop="9.3dp" android:layout_marginRight="4dp" android:text="@string/edit" android:layout_toRightOf="@+id/HistoryDeleteAllBtn"/>
        <Button android:textSize="12sp" android:textColor="@color/textColor_Black" android:id="@+id/HistorySortBtn" android:background="@drawable/btn" android:layout_width="60dp" android:layout_height="35dp" android:layout_marginTop="9.3dp" android:text="@string/sort" android:layout_toRightOf="@+id/HistoryEditBtn"/>
        <Button android:textSize="12sp" android:textColor="@drawable/btn_textcolor_selector" android:id="@+id/HistoryDeleteBtn" android:background="@drawable/btn" android:visibility="gone" android:layout_width="60dp" android:layout_height="35dp" android:layout_marginTop="9.3dp" android:text="@string/delete"/>
    </RelativeLayout>
    <LinearLayout android:id="@+id/SearchContentInnerHyperLayout" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/HistoryToolbarLayout">
        <include layout="@layout/search_hyper_layout"/>
    </LinearLayout>
    <include layout="@layout/save_word_popup_right_layout"/>
</RelativeLayout>
